--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>smonitor</title>
+    <title>智能综合监控平台</title>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=nZYfEpsS72XnqVpdQBzREXzvSE9FxYyD"></script>
   </body>
 </html>
